support urlsession with combine

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -4,8 +4,8 @@ platform :ios, '11.0'
 target 'FunNet_Example' do
   pod 'FunNet', :path => '../'
   pod 'LithoOperators', :git => 'https://github.com/LithoByte/LithoOperators'
-  pod 'Slippers', git: 'https://github.com/ThryvInc/slippers'
-  pod 'LithoUtils/Core', git: 'https://github.com/ThryvInc/litho-utils'
+  pod 'Slippers', git: 'https://github.com/LithoByte/slippers'
+  pod 'LithoUtils/Core', git: 'https://github.com/LithoByte/litho-utils'
   target 'FunNet_Tests' do
     inherit! :search_paths
   end
