--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,9 +1,9 @@
 use_frameworks!
-platform :ios, '10.0'
+platform :ios, '9.0'
 
 target 'FunNet_Example' do
   pod 'FunNet', :path => '../'
-
+  pod 'LithoOperators', git: 'https://github.com/LithoByte/LithoOperators', commit: '7fd36e0aa41aad4c292eda7de76a859c961f16a7'
   target 'FunNet_Tests' do
     inherit! :search_paths
   end
